--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,53 +1,62 @@
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="<%= asset_path('lang-logo.png') %>">
-    </a>
-    <h1>Getting Started with Ruby on Heroku</h1>
-    <p>This is a sample Ruby application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-ruby"><span class="glyphicon glyphicon-flash"></span> Getting Started with Ruby</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/ruby-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-ruby" class="alert-link">Getting Started with Ruby on Heroku</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/ruby-getting-started">Heroku Button</a> on the repository.</li>
+ <!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="description" content="Grade Calculator: CMPT 276 Project">
+<meta name="keywords" content="HTML,CSS,JavaScript">
+<meta name="author" content="David Miiller">
+<title>Grade Calculator: 276 Assignment 1</title>
+<link rel="stylesheet" type="text/css" href="student.css">
+</head>
+<body>
 
-        <li>When Heroku received the source code, it fetched all the dependencies in the <a href="https://github.com/heroku/ruby-getting-started/blob/master/Gemfile">Gemfile</a>, creating a deployable slug.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>git clone https://github.com/heroku/ruby-getting-started.git</code> - this will create a local copy of the source code for the app</li>
-          <li><code>cd ruby-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-ruby#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Getting Started with Ruby on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/deploying-ruby-and-rails">Deploying Ruby Apps on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
+<div id = "main">
+	<h1>Grade Calculator</h1>
+	<div id = "inner">
+	<h3> Activities </h3>
+		<table>
+		  <tr id = "head">
+			<td><p>Name</p></td>
+			<td><p>Short Name</p></td>
+			<td><p>Grade</p></td>
+			<td><p>Percentage</p></td>
+		  </tr>
+		  <tr>
+			<td><p>Activity 1</p></td>
+			<td><p>A1</p></td>
+			<td><input id="a1" type="text"> / <input id="a2" type="text"></td>
+			<td><p id = "ans1"> </p></td>
+		  </tr>
+		  <tr>
+			<td><p>Activity 2</p></td>
+			<td><p>A2</p></td>
+			<td><input id="b1" type="text"> / <input id="b2" type="text"></td>
+			<td><p id = "ans2"> </p></td>
+		  </tr>
+		   <tr>
+			<td><p>Activity 3</p></td>
+			<td><p>A3</p></td>
+			<td><input id="c1" type="text"> / <input id="c2" type="text"></td>
+			<td><p id = "ans3"> </p></td>
+		  </tr>
+		  <tr>
+			<td><p>Activity 4</p></td>
+			<td><p>A4</p></td>
+			<td><input id="d1" type="text"> / <input id="d2" type="text"></td>
+			<td><p id = "ans4"> </p></td>
+		  </tr>
+		  <tr>
+			<td><p id = "tot">Total</p></td>
+			<td></td>
+			<td></td>
+			<td><p id = "result"> </p></td>
+		  </tr>
+		</table> 
+		<p id = "btns"> <button type="button" id = "avg" >AVERAGE</button> <button type="button" id = "mean">MEAN</button>  </p>
+	</div>
 </div>
+
+<script type="text/javascript" src="student.js"></script>
+
+</body> 
+</html> 
