--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -2,16 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Grade Calculator: CMPT 276 Project">
+<meta name="description" content="Student Height Database: CMPT 276 Project">
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <meta name="author" content="David Miiller">
-<title>Grade Calculator: 276 Assignment 1</title>
+<title>Student Height Database: 276 Assignment 2</title>
 <link rel="stylesheet" type="text/css" href="student.css">
 </head>
 <body>
 
 <div id = "main">
-	<h1>Grade Calculator</h1>
+	<h1>Height Chart</h1>
 	<div id = "inner">
 	<h3> Activities </h3>
 		<table>
